Notebook - Added the rest of the feature sets

--- a/notebooks/PancakePredictPortfolio.ipynb
+++ b/notebooks/PancakePredictPortfolio.ipynb
@@ -514,29 +514,23 @@
    "source": [
     "feature_set1 = ['bull_amount', 'bear_amount', 'position']\n",
     "\n",
-    "feature_set2 = all_players_bet_cols # Keep the features from the feature_set_1 as they have predicting power\n",
+    "feature_set2 = all_players_bet_cols.copy() # Keep the features from the feature_set_1 as they have predicting power\n",
     "feature_set2.extend(feature_set1)\n",
     "\n",
-    "feature_set3 = all_players_bet_cols + all_players_amount_cols\n",
+    "feature_set3 = all_players_bet_cols.copy() + all_players_amount_cols.copy()\n",
     "feature_set3.extend(feature_set1)\n",
     "\n",
-    "feature_set4 = best_10p_players_bet_cols\n",
+    "feature_set4 = best_10p_players_bet_cols.copy()\n",
     "feature_set4.extend(feature_set1)\n",
     "\n",
-    "feature_set5 = best_10p_players_bet_cols + best_10p_players_amount_cols\n",
+    "feature_set5 = best_10p_players_bet_cols.copy() + best_10p_players_amount_cols.copy()\n",
     "feature_set5.extend(feature_set1)\n",
     "\n",
-    "feature_set6 = best_20p_players_bet_cols\n",
+    "feature_set6 = best_20p_players_bet_cols.copy()\n",
     "feature_set6.extend(feature_set1)\n",
     "\n",
-    "feature_set7 = best_20p_players_bet_cols + best_20p_players_amount_cols\n",
-    "feature_set7.extend(feature_set1)\n",
-    "\n",
-    "# We need separate dataframes for these 2\n",
-    "feature_set8_train_df = pd.DataFrame()\n",
-    "feature_set8_train_df['Sum'] = df[col_list].sum(axis=1)\n",
-    "# feature_set8\n",
-    "# feature_set9"
+    "feature_set7 = best_20p_players_bet_cols.copy() + best_20p_players_amount_cols.copy()\n",
+    "feature_set7.extend(feature_set1)"
    ]
   },
   {
@@ -545,40 +539,53 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Identifying columns for bet sizes and bet types\n",
-    "bet_type_columns = best_20p_players_bet_cols\n",
-    "bet_size_columns = best_20p_players_amount_cols\n",
-    "\n",
-    "def create_aggregated_df(df, bet_type_columns, bet_size_columns):\n",
-    "    filtered_df = df[bet_size_columns + bet_type_columns + ['epoch']].copy()\n",
+    "def create_aggregated_df(df, bet_type_columns, bet_size_columns, additional_columns):\n",
+    "    filtered_df = df[bet_size_columns + bet_type_columns + ['epoch'] + additional_columns].copy()\n",
     "\n",
     "    # Calculate Bear number for each row\n",
-    "    filtered_df['bear_number'] = filtered_df[bet_type_columns].isin(['Bear']).sum(axis=1)\n",
-    "    filtered_df['bull_number'] = filtered_df[bet_type_columns].isin(['Bull']).sum(axis=1)\n",
+    "    filtered_df['best_bear_number'] = filtered_df[bet_type_columns].isin(['Bear']).sum(axis=1)\n",
+    "    filtered_df['best_bull_number'] = filtered_df[bet_type_columns].isin(['Bull']).sum(axis=1)\n",
     "\n",
-    "    filtered_df['bear_amount'] = 0\n",
-    "    filtered_df['bull_amount'] = 0\n",
+    "    filtered_df['best_bear_amount'] = 0\n",
+    "    filtered_df['best_bull_amount'] = 0\n",
     "\n",
     "    # Replace NaN with 0 in the bet size columns\n",
     "    filtered_df[bet_size_columns] = filtered_df[bet_size_columns].fillna(0)\n",
     "\n",
     "    # Iterate through each wallet's columns to aggregate the data\n",
-    "    for wallet in wallets:\n",
-    "        bet_size_column = wallet + '_amount'\n",
-    "        bet_type_column = wallet + '_bet'\n",
+    "    for bet_type_column in bet_type_columns:\n",
+    "        bet_size_column = bet_type_column.replace('_bet', '_amount')\n",
     "\n",
     "        wallet_df = filtered_df[['epoch', bet_size_column, bet_type_column]]\n",
     "\n",
     "        bear_bets = np.where(wallet_df[bet_type_column] == 'Bear', wallet_df[bet_size_column], 0)\n",
     "        bull_bets = np.where(wallet_df[bet_type_column] == 'Bull', wallet_df[bet_size_column], 0)\n",
     "\n",
-    "        filtered_df['bear_amount'] += bear_bets\n",
-    "        filtered_df['bull_amount'] += bull_bets\n",
+    "        filtered_df['best_bear_amount'] += bear_bets\n",
+    "        filtered_df['best_bull_amount'] += bull_bets\n",
     "\n",
     "    # Drop rows where all columns are 0\n",
     "    filtered_df = filtered_df[(filtered_df[bet_size_columns] != 0).any(axis=1)]\n",
     "\n",
     "    return filtered_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "# We need separate dataframes for these 2\n",
+    "feature_set8_train_df = create_aggregated_df(train_df, best_10p_players_bet_cols, best_10p_players_amount_cols, feature_set1.copy())\n",
+    "feature_set8_validate_df = create_aggregated_df(validate_df, best_10p_players_bet_cols, best_10p_players_amount_cols, feature_set1.copy())\n",
+    "feature_set8_test_df = create_aggregated_df(test_df, best_10p_players_bet_cols, best_10p_players_amount_cols, feature_set1.copy())\n",
+    "\n",
+    "feature_set9_train_df = create_aggregated_df(train_df, best_20p_players_bet_cols, best_20p_players_amount_cols, feature_set1.copy())\n",
+    "feature_set9_validate_df = create_aggregated_df(validate_df, best_20p_players_bet_cols, best_20p_players_amount_cols, feature_set1.copy())\n",
+    "feature_set9_test_df = create_aggregated_df(test_df, best_20p_players_bet_cols, best_20p_players_amount_cols, feature_set1.copy())"
    ]
   },
   {
