Notebook - Print the feature sets info

--- a/notebooks/PancakePredictPortfolio.ipynb
+++ b/notebooks/PancakePredictPortfolio.ipynb
@@ -567,7 +567,7 @@
     "    # Drop rows where all columns are 0\n",
     "    filtered_df = filtered_df[(filtered_df[bet_size_columns] != 0).any(axis=1)]\n",
     "\n",
-    "    return filtered_df"
+    "    return filtered_df[['bull_amount', 'bear_amount', 'position', 'best_bear_number', 'best_bull_number', 'best_bear_amount', 'best_bull_amount']]"
    ]
   },
   {
@@ -586,6 +586,41 @@
     "feature_set9_train_df = create_aggregated_df(train_df, best_20p_players_bet_cols, best_20p_players_amount_cols, feature_set1.copy())\n",
     "feature_set9_validate_df = create_aggregated_df(validate_df, best_20p_players_bet_cols, best_20p_players_amount_cols, feature_set1.copy())\n",
     "feature_set9_test_df = create_aggregated_df(test_df, best_20p_players_bet_cols, best_20p_players_amount_cols, feature_set1.copy())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Print the feature sets info"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "feature_sets_list = [feature_set1, feature_set2, feature_set3, feature_set4, feature_set5, feature_set6, feature_set7]\n",
+    "\n",
+    "for i, feature_set in enumerate(feature_sets_list):\n",
+    "    print(f\"--- Feature set {i+1} Total: {len(feature_set)} ---\")\n",
+    "    print(feature_set)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "feature_sets_dfs_list = [feature_set8_train_df, feature_set9_train_df]\n",
+    "\n",
+    "for i, feature_set_df in enumerate(feature_sets_dfs_list):\n",
+    "    print(f\"--- Feature set {i+8} Total: {feature_set_df.shape[1]} ---\")\n",
+    "    print(feature_set_df.columns.to_list())"
    ]
   },
   {
