Notebook - Changed the feature sets dataframes to be generated in the "Choosing the feature sets" section

--- a/notebooks/PancakePredictPortfolio.ipynb
+++ b/notebooks/PancakePredictPortfolio.ipynb
@@ -512,25 +512,89 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def prepare_data(df, cols_to_leave_arg):\n",
+    "    cols_to_leave = cols_to_leave_arg.copy()  # Make a copy of the list to not remove the elements from the original list\n",
+    "\n",
+    "    df = df[df[\"position\"] != \"House\"]  # To make the problem binary classification\n",
+    "    df = df[df[\"total_amount\"] != 0]  # Do not consider the rounds where no one bet\n",
+    "    df = df[cols_to_leave]\n",
+    "\n",
+    "    # Remove nan rows (where none from selected players placed any bet)\n",
+    "    not_nan_cols = ['position', 'bull_amount', 'bear_amount']\n",
+    "    for element in not_nan_cols:\n",
+    "        cols_to_leave.remove(element)\n",
+    "\n",
+    "    if len(cols_to_leave) > 0:\n",
+    "        df = df.dropna(subset=cols_to_leave, how='all')\n",
+    "\n",
+    "    # Get the list of the categorical cols and do one hot encoding\n",
+    "    categorical_cols = df.select_dtypes(include=['category']).columns.to_list()\n",
+    "    categorical_cols.remove('position')\n",
+    "\n",
+    "    for col in categorical_cols:\n",
+    "        one_hot_encoded_cols = pd.get_dummies(df[col], prefix_sep='_', prefix=col)\n",
+    "\n",
+    "        # Drop column with 'House' in the name (as the player can only bet on Bull or Bear)\n",
+    "        one_hot_encoded_cols = one_hot_encoded_cols.drop([col + '_House'], axis=1)\n",
+    "        df = df.drop([col], axis=1).join(one_hot_encoded_cols)\n",
+    "\n",
+    "    df = df.replace(\"Bull\", 1)\n",
+    "    df = df.replace(\"Bear\", 0)\n",
+    "\n",
+    "    df = df.replace(\"House\", np.nan)  # Although the House rows are dropped, we have to replace it to remove the category\n",
+    "    df = df.astype(float)\n",
+    "\n",
+    "    df.reset_index(drop=True, inplace=True)\n",
+    "\n",
+    "    return df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "feature_set1 = ['bull_amount', 'bear_amount', 'position']\n",
+    "feature_set1_train_df = prepare_data(train_df, feature_set1)\n",
+    "feature_set1_validate_df = prepare_data(validate_df, feature_set1)\n",
+    "eature_set1_test_df = prepare_data(train_df, feature_set1)\n",
     "\n",
     "feature_set2 = all_players_bet_cols.copy() # Keep the features from the feature_set_1 as they have predicting power\n",
     "feature_set2.extend(feature_set1)\n",
+    "feature_set2_train_df = prepare_data(train_df, feature_set2)\n",
+    "feature_set2_validate_df = prepare_data(validate_df, feature_set2)\n",
+    "eature_set2_test_df = prepare_data(train_df, feature_set2)\n",
     "\n",
     "feature_set3 = all_players_bet_cols.copy() + all_players_amount_cols.copy()\n",
     "feature_set3.extend(feature_set1)\n",
+    "feature_set3_train_df = prepare_data(train_df, feature_set3)\n",
+    "feature_set3_validate_df = prepare_data(validate_df, feature_set3)\n",
+    "eature_set3_test_df = prepare_data(train_df, feature_set3)\n",
     "\n",
     "feature_set4 = best_10p_players_bet_cols.copy()\n",
     "feature_set4.extend(feature_set1)\n",
+    "feature_set4_train_df = prepare_data(train_df, feature_set4)\n",
+    "feature_set4_validate_df = prepare_data(validate_df, feature_set4)\n",
+    "eature_set4_test_df = prepare_data(train_df, feature_set4)\n",
     "\n",
     "feature_set5 = best_10p_players_bet_cols.copy() + best_10p_players_amount_cols.copy()\n",
     "feature_set5.extend(feature_set1)\n",
+    "feature_set5_train_df = prepare_data(train_df, feature_set5)\n",
+    "feature_set5_validate_df = prepare_data(validate_df, feature_set5)\n",
+    "eature_set5_test_df = prepare_data(train_df, feature_set5)\n",
     "\n",
     "feature_set6 = best_20p_players_bet_cols.copy()\n",
     "feature_set6.extend(feature_set1)\n",
+    "feature_set6_train_df = prepare_data(train_df, feature_set6)\n",
+    "feature_set6_validate_df = prepare_data(validate_df, feature_set6)\n",
+    "eature_set6_test_df = prepare_data(train_df, feature_set6)\n",
     "\n",
     "feature_set7 = best_20p_players_bet_cols.copy() + best_20p_players_amount_cols.copy()\n",
-    "feature_set7.extend(feature_set1)"
+    "feature_set7.extend(feature_set1)\n",
+    "feature_set7_train_df = prepare_data(train_df, feature_set7)\n",
+    "feature_set7_validate_df = prepare_data(validate_df, feature_set7)\n",
+    "eature_set7_test_df = prepare_data(train_df, feature_set7)"
    ]
   },
   {
@@ -540,7 +604,7 @@
    "outputs": [],
    "source": [
     "def create_aggregated_df(df, bet_type_columns, bet_size_columns, additional_columns):\n",
-    "    filtered_df = df[bet_size_columns + bet_type_columns + ['epoch'] + additional_columns].copy()\n",
+    "    filtered_df = df[bet_size_columns + bet_type_columns + ['epoch', 'total_amount'] + additional_columns].copy()\n",
     "\n",
     "    # Calculate Bear number for each row\n",
     "    filtered_df['best_bear_number'] = filtered_df[bet_type_columns].isin(['Bear']).sum(axis=1)\n",
@@ -567,7 +631,7 @@
     "    # Drop rows where all columns are 0\n",
     "    filtered_df = filtered_df[(filtered_df[bet_size_columns] != 0).any(axis=1)]\n",
     "\n",
-    "    return filtered_df[['bull_amount', 'bear_amount', 'position', 'best_bear_number', 'best_bull_number', 'best_bear_amount', 'best_bull_amount']]"
+    "    return filtered_df"
    ]
   },
   {
@@ -578,14 +642,25 @@
    },
    "outputs": [],
    "source": [
-    "# We need separate dataframes for these 2\n",
+    "# We need separate function for these 2\n",
+    "feature_set8 = ['best_bear_number', 'best_bull_number', 'best_bear_amount', 'best_bull_amount']\n",
+    "feature_set8.extend(feature_set1)\n",
     "feature_set8_train_df = create_aggregated_df(train_df, best_10p_players_bet_cols, best_10p_players_amount_cols, feature_set1.copy())\n",
     "feature_set8_validate_df = create_aggregated_df(validate_df, best_10p_players_bet_cols, best_10p_players_amount_cols, feature_set1.copy())\n",
     "feature_set8_test_df = create_aggregated_df(test_df, best_10p_players_bet_cols, best_10p_players_amount_cols, feature_set1.copy())\n",
     "\n",
+    "feature_set8_train_df = prepare_data(feature_set8_train_df, feature_set8)\n",
+    "feature_set8_validate_df = prepare_data(feature_set8_validate_df, feature_set8)\n",
+    "feature_set8_test_df = prepare_data(feature_set8_test_df, feature_set8)\n",
+    "\n",
+    "feature_set9 = feature_set8\n",
     "feature_set9_train_df = create_aggregated_df(train_df, best_20p_players_bet_cols, best_20p_players_amount_cols, feature_set1.copy())\n",
     "feature_set9_validate_df = create_aggregated_df(validate_df, best_20p_players_bet_cols, best_20p_players_amount_cols, feature_set1.copy())\n",
-    "feature_set9_test_df = create_aggregated_df(test_df, best_20p_players_bet_cols, best_20p_players_amount_cols, feature_set1.copy())"
+    "feature_set9_test_df = create_aggregated_df(test_df, best_20p_players_bet_cols, best_20p_players_amount_cols, feature_set1.copy())\n",
+    "\n",
+    "feature_set9_train_df = prepare_data(feature_set9_train_df, feature_set9)\n",
+    "feature_set9_validate_df = prepare_data(feature_set9_validate_df, feature_set9)\n",
+    "feature_set9_test_df = prepare_data(feature_set9_test_df, feature_set9)"
    ]
   },
   {
@@ -681,43 +756,6 @@
     "            'number_of_bets_above_threshold': df['predicted_position'].count()}\n",
     "\n",
     "\n",
-    "def prepare_data(df, cols_to_leave_arg):\n",
-    "    cols_to_leave = cols_to_leave_arg.copy()  # Make a copy of the list to not remove the elements from the original list\n",
-    "\n",
-    "    df = df[df[\"position\"] != \"House\"]  # To make the problem binary classification\n",
-    "    df = df[df[\"total_amount\"] != 0]  # Do not consider the rounds where no one bet\n",
-    "    df = df[cols_to_leave]\n",
-    "\n",
-    "    # Remove nan rows (where none from selected players placed any bet)\n",
-    "    not_nan_cols = ['position', 'bull_amount', 'bear_amount']\n",
-    "    for element in not_nan_cols:\n",
-    "        cols_to_leave.remove(element)\n",
-    "\n",
-    "    if len(cols_to_leave) > 0:\n",
-    "        df = df.dropna(subset=cols_to_leave, how='all')\n",
-    "\n",
-    "    # Get the list of the categorical cols and do one hot encoding\n",
-    "    categorical_cols = df.select_dtypes(include=['category']).columns.to_list()\n",
-    "    categorical_cols.remove('position')\n",
-    "\n",
-    "    for col in categorical_cols:\n",
-    "        one_hot_encoded_cols = pd.get_dummies(df[col], prefix_sep='_', prefix=col)\n",
-    "\n",
-    "        # Drop column with 'House' in the name (as the player can only bet on Bull or Bear)\n",
-    "        one_hot_encoded_cols = one_hot_encoded_cols.drop([col + '_House'], axis=1)\n",
-    "        df = df.drop([col], axis=1).join(one_hot_encoded_cols)\n",
-    "\n",
-    "    df = df.replace(\"Bull\", 1)\n",
-    "    df = df.replace(\"Bear\", 0)\n",
-    "\n",
-    "    df = df.replace(\"House\", np.nan)  # Although the House rows are dropped, we have to replace it to remove the category\n",
-    "    df = df.astype(float)\n",
-    "\n",
-    "    df.reset_index(drop=True, inplace=True)\n",
-    "\n",
-    "    return df\n",
-    "\n",
-    "\n",
     "def main(train_df, validate_df, clfs, threshold_list, cols_to_leave):\n",
     "\n",
     "    train_df = prepare_data(train_df, cols_to_leave)\n",
@@ -761,10 +799,12 @@
     "from sklearn.neural_network import MLPClassifier\n",
     "\n",
     "# Checking the common classifiers with the unedited data\n",
-    "clfs = [RandomForestClassifier(100), RandomForestClassifier(500), RandomForestClassifier(1000),\n",
-    "        DecisionTreeClassifier(criterion='entropy'), MLPClassifier(alpha=1, max_iter=1000), GaussianNB(),\n",
-    "        KNeighborsClassifier(1), KNeighborsClassifier(3), KNeighborsClassifier(5), KNeighborsClassifier(7),\n",
-    "        KNeighborsClassifier(9), KNeighborsClassifier(11), LogisticRegression(max_iter=1000)]\n",
+    "# clfs = [RandomForestClassifier(100), RandomForestClassifier(500), RandomForestClassifier(1000),\n",
+    "#         DecisionTreeClassifier(criterion='entropy'), MLPClassifier(alpha=1, max_iter=1000), GaussianNB(),\n",
+    "#         KNeighborsClassifier(1), KNeighborsClassifier(3), KNeighborsClassifier(5), KNeighborsClassifier(7),\n",
+    "#         KNeighborsClassifier(9), KNeighborsClassifier(11), LogisticRegression(max_iter=1000)]\n",
+    "\n",
+    "clfs = [RandomForestClassifier(100), RandomForestClassifier(500)]\n",
     "\n",
     "threshold_list = [0.6, 0.7, 0.8, 0.9, 0.95]\n",
     "\n",
