--- a/notebooks/PancakePredictPortfolio.ipynb
+++ b/notebooks/PancakePredictPortfolio.ipynb
@@ -777,6 +777,32 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.naive_bayes import GaussianNB\n",
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.neural_network import MLPClassifier\n",
+    "from sklearn.svm import SVC\n",
+    "\n",
+    "clfs = [RandomForestClassifier(100), RandomForestClassifier(500), RandomForestClassifier(1000),\n",
+    "        DecisionTreeClassifier(criterion='entropy'), MLPClassifier(alpha=1, max_iter=1000), GaussianNB(),\n",
+    "        KNeighborsClassifier(3), KNeighborsClassifier(5), KNeighborsClassifier(7),\n",
+    "        KNeighborsClassifier(9), KNeighborsClassifier(11), LogisticRegression(max_iter=1000)]\n",
+    "\n",
+    "svc_clfs = [SVC(kernel='rbf', probability=True), SVC(kernel='linear', probability=True),\n",
+    "            SVC(kernel='rbf', probability=True, C=10), SVC(kernel='linear', probability=True, C=10),\n",
+    "            SVC(kernel='rbf', probability=True, C=50), SVC(kernel='linear', probability=True, C=50)]\n",
+    "\n",
+    "threshold_list = [0.6, 0.7, 0.8, 0.9, 0.95]"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -791,23 +817,6 @@
    },
    "outputs": [],
    "source": [
-    "from sklearn.neighbors import KNeighborsClassifier\n",
-    "from sklearn.linear_model import LogisticRegression\n",
-    "from sklearn.naive_bayes import GaussianNB\n",
-    "from sklearn.tree import DecisionTreeClassifier\n",
-    "from sklearn.ensemble import RandomForestClassifier\n",
-    "from sklearn.neural_network import MLPClassifier\n",
-    "\n",
-    "# Checking the common classifiers with the unedited data\n",
-    "# clfs = [RandomForestClassifier(100), RandomForestClassifier(500), RandomForestClassifier(1000),\n",
-    "#         DecisionTreeClassifier(criterion='entropy'), MLPClassifier(alpha=1, max_iter=1000), GaussianNB(),\n",
-    "#         KNeighborsClassifier(1), KNeighborsClassifier(3), KNeighborsClassifier(5), KNeighborsClassifier(7),\n",
-    "#         KNeighborsClassifier(9), KNeighborsClassifier(11), LogisticRegression(max_iter=1000)]\n",
-    "\n",
-    "clfs = [RandomForestClassifier(100), RandomForestClassifier(500)]\n",
-    "\n",
-    "threshold_list = [0.6, 0.7, 0.8, 0.9, 0.95]\n",
-    "\n",
     "experiment1_df = main(train_df=train_df, validate_df=validate_df, clfs=clfs, threshold_list=threshold_list, cols_to_leave=feature_set1)"
    ]
   },
@@ -817,7 +826,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "experiment1_df"
+    "experiment1_df.sort_values(by='accuracy_above_threshold', ascending=False).head(20)"
    ]
   },
   {
@@ -826,13 +835,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.svm import SVC\n",
-    "\n",
-    "svc_clfs = [SVC(kernel='rbf', probability=True), SVC(kernel='linear', probability=True),\n",
-    "            SVC(kernel='rbf', probability=True, C=10), SVC(kernel='linear', probability=True, C=10),\n",
-    "            SVC(kernel='rbf', probability=True, C=50), SVC(kernel='linear', probability=True, C=50)]\n",
-    "\n",
-    "experiment2_df = main(train_df=train_df, validate_df=validate_df, clfs=svc_clfs, threshold_list=[0.6, 0.7, 0.8, 0.9, 0.95], cols_to_leave=['bull_amount', 'bear_amount', 'position'])"
+    "experiment2_df = main(train_df=train_df, validate_df=validate_df, clfs=svc_clfs, threshold_list=threshold_list, cols_to_leave=feature_set1)"
    ]
   },
   {
@@ -841,7 +844,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "experiment2_df"
+    "experiment2_df.sort_values(by='accuracy_above_threshold', ascending=False).head(20)"
    ]
   },
   {
