Notebook - Updated the "Preparing the data to be used in the ml" section and added "Removing the outliers" subsection

--- a/notebooks/PancakePredictPortfolio.ipynb
+++ b/notebooks/PancakePredictPortfolio.ipynb
@@ -370,7 +370,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Preparing the data to be used in the ml ##"
+    "## Preparing the data to be used in the ml"
    ]
   },
   {
@@ -462,6 +462,57 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Cleaning the data before the training\r\n",
+    "1. Because NaN values provide no information we can delete all the rows that contain only NaNs. This would work in the production environment as if we get no information about the current round we can simply pass that round (so we don't place any bet).\r\n",
+    "2. For the simplicity we will remove all the rows with 'position' == 'House' so we end up with a binary classification problem. Later, when finally testing the model we will add this category once again (when its House you lose no matter if you place a bet for Bull or Bear)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Removing the outliers\n",
+    "All possible outliers represent natural variations and they will be left in the dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_df.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "validate_df.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_df.describe()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Feature scaling\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Choosing the feature sets\r\n",
     "We will check few types of features sets to check which one provides the most useful information about the label.\r\n",
     "- total pool sizes for Bear/Bull bets (no additional info about the player: 2 columns in total (these features will be added to ALL feture sets below)s)\r\n",
@@ -485,6 +536,8 @@
     "# There are 247 wallets in total, lets check how many is 10% and 20%\n",
     "p10 = int(len(players_metrics_df)*0.1)\n",
     "p20 = int(len(players_metrics_df)*0.2)\n",
+    "print(p10, p20)\n",
+    "\n",
     "best_10p_players_list = players_metrics_df.sort_values(by='total_profit', ascending=False).reset_index(drop=True).loc[:p10-1, 'player'].values.tolist()\n",
     "best_20p_players_list = players_metrics_df.sort_values(by='total_profit', ascending=False).reset_index(drop=True).loc[:p20-1, 'player'].values.tolist()"
    ]
@@ -696,15 +749,6 @@
     "for i, feature_set_df in enumerate(feature_sets_dfs_list):\n",
     "    print(f\"--- Feature set {i+8} Total: {feature_set_df.shape[1]} ---\")\n",
     "    print(feature_set_df.columns.to_list())"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Cleaning the data before the training\r\n",
-    "1. Because NaN values provide no information we can delete all the rows that contain only NaNs. This would work in the production environment as if we get no information about the current round we can simply pass that round (so we don't place any bet).\r\n",
-    "2. For the simplicity we will remove all the rows with 'position' == 'House' so we end up with a binary classification problem. Later, when finally testing the model we will add this category once again (when its House you lose no matter if you place a bet for Bull or Bear)"
    ]
   },
   {
