Notebook - Updated the "Removing the outliers" section with text and histograms

--- a/notebooks/PancakePredictPortfolio.ipynb
+++ b/notebooks/PancakePredictPortfolio.ipynb
@@ -471,48 +471,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Removing the outliers\n",
-    "All possible outliers represent natural variations and they will be left in the dataset"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "train_df.describe()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "validate_df.describe()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "test_df.describe()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Feature scaling\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### Choosing the feature sets\r\n",
     "We will check few types of features sets to check which one provides the most useful information about the label.\r\n",
     "- total pool sizes for Bear/Bull bets (no additional info about the player: 2 columns in total (these features will be added to ALL feture sets below)s)\r\n",
@@ -749,6 +707,115 @@
     "for i, feature_set_df in enumerate(feature_sets_dfs_list):\n",
     "    print(f\"--- Feature set {i+8} Total: {feature_set_df.shape[1]} ---\")\n",
     "    print(feature_set_df.columns.to_list())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Removing the outliers\n",
+    "All possible outliers represent natural variations and they will be left in the dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_df.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "validate_df.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_df.describe()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Feature scaling\n",
+    "The columns containing info about each players bet type (Bull/Bear or None, so categorical data) will be One-Hot encoded. The rest of the columns containing info about each players bet size (so numerical data) need to be scaled. Let's check the distribution of some random columns to choose the scaler."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(feature_set1_train_df.columns)\n",
+    "feature_set1_train_df.iloc[:, 0].hist(range=(0,100), bins=20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(feature_set3_train_df.columns)\n",
+    "feature_set3_train_df.iloc[:, 15].hist(range=(0,5), bins=20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(feature_set5_train_df.columns)\n",
+    "feature_set5_train_df.iloc[:, 25].hist(range=(0,100), bins=20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(feature_set7_train_df.columns)\n",
+    "feature_set7_train_df.iloc[:, 32].hist(range=(0,15), bins=20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(feature_set9_train_df.columns)\n",
+    "feature_set9_train_df.iloc[:, 0].hist(range=(0,15), bins=20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "feature_set9_train_df.iloc[:, 2].hist(range=(0,15), bins=20)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The data distribution seems to not be normal, so we will use the MinMaxScaler from the scikit-learn library. The scaler have to be fit on the training data, then used to scale the training, validation and test data."
    ]
   },
   {
