Notebook - Changed the "Choosing the feature sets" section

--- a/notebooks/PancakePredictPortfolio.ipynb
+++ b/notebooks/PancakePredictPortfolio.ipynb
@@ -684,28 +684,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "feature_sets_list = [feature_set1, feature_set2, feature_set3, feature_set4, feature_set5, feature_set6, feature_set7]\n",
-    "\n",
-    "for i, feature_set in enumerate(feature_sets_list):\n",
-    "    print(f\"--- Feature set {i+1} Total: {len(feature_set)} ---\")\n",
-    "    print(feature_set)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "feature_sets_dfs_list = [feature_set8_train_df, feature_set9_train_df]\n",
+    "feature_sets_dfs_list = [feature_set1_train_df, feature_set2_train_df, feature_set3_train_df, feature_set4_train_df, feature_set5_train_df, feature_set6_train_df, feature_set7_train_df, feature_set8_train_df, feature_set9_train_df]\n",
     "\n",
     "for i, feature_set_df in enumerate(feature_sets_dfs_list):\n",
-    "    print(f\"--- Feature set {i+8} Total: {feature_set_df.shape[1]} ---\")\n",
+    "    print(f\"--- Feature set {i+1} Total: {feature_set_df.shape[1]} ---\")\n",
     "    print(feature_set_df.columns.to_list())"
    ]
   },
@@ -816,6 +801,18 @@
    "metadata": {},
    "source": [
     "The data distribution seems to not be normal, so we will use the MinMaxScaler from the scikit-learn library. The scaler have to be fit on the training data, then used to scale the training, validation and test data."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.preprocessing import MinMaxScaler\n",
+    "# Train MinMaxScalers for each training dataset\n",
+    "minmax = MinMaxScaler().set_output(transform=\"pandas\")\n",
+    "minmax.fit()"
    ]
   },
   {
