Notebook - Added MinMaxScaler and scaled all the datasets

--- a/notebooks/PancakePredictPortfolio.ipynb
+++ b/notebooks/PancakePredictPortfolio.ipynb
@@ -569,43 +569,43 @@
     "feature_set1 = ['bull_amount', 'bear_amount', 'position']\n",
     "feature_set1_train_df = prepare_data(train_df, feature_set1)\n",
     "feature_set1_validate_df = prepare_data(validate_df, feature_set1)\n",
-    "eature_set1_test_df = prepare_data(train_df, feature_set1)\n",
+    "feature_set1_test_df = prepare_data(train_df, feature_set1)\n",
     "\n",
     "feature_set2 = all_players_bet_cols.copy() # Keep the features from the feature_set_1 as they have predicting power\n",
     "feature_set2.extend(feature_set1)\n",
     "feature_set2_train_df = prepare_data(train_df, feature_set2)\n",
     "feature_set2_validate_df = prepare_data(validate_df, feature_set2)\n",
-    "eature_set2_test_df = prepare_data(train_df, feature_set2)\n",
+    "feature_set2_test_df = prepare_data(train_df, feature_set2)\n",
     "\n",
     "feature_set3 = all_players_bet_cols.copy() + all_players_amount_cols.copy()\n",
     "feature_set3.extend(feature_set1)\n",
     "feature_set3_train_df = prepare_data(train_df, feature_set3)\n",
     "feature_set3_validate_df = prepare_data(validate_df, feature_set3)\n",
-    "eature_set3_test_df = prepare_data(train_df, feature_set3)\n",
+    "feature_set3_test_df = prepare_data(train_df, feature_set3)\n",
     "\n",
     "feature_set4 = best_10p_players_bet_cols.copy()\n",
     "feature_set4.extend(feature_set1)\n",
     "feature_set4_train_df = prepare_data(train_df, feature_set4)\n",
     "feature_set4_validate_df = prepare_data(validate_df, feature_set4)\n",
-    "eature_set4_test_df = prepare_data(train_df, feature_set4)\n",
+    "feature_set4_test_df = prepare_data(train_df, feature_set4)\n",
     "\n",
     "feature_set5 = best_10p_players_bet_cols.copy() + best_10p_players_amount_cols.copy()\n",
     "feature_set5.extend(feature_set1)\n",
     "feature_set5_train_df = prepare_data(train_df, feature_set5)\n",
     "feature_set5_validate_df = prepare_data(validate_df, feature_set5)\n",
-    "eature_set5_test_df = prepare_data(train_df, feature_set5)\n",
+    "feature_set5_test_df = prepare_data(train_df, feature_set5)\n",
     "\n",
     "feature_set6 = best_20p_players_bet_cols.copy()\n",
     "feature_set6.extend(feature_set1)\n",
     "feature_set6_train_df = prepare_data(train_df, feature_set6)\n",
     "feature_set6_validate_df = prepare_data(validate_df, feature_set6)\n",
-    "eature_set6_test_df = prepare_data(train_df, feature_set6)\n",
+    "feature_set6_test_df = prepare_data(train_df, feature_set6)\n",
     "\n",
     "feature_set7 = best_20p_players_bet_cols.copy() + best_20p_players_amount_cols.copy()\n",
     "feature_set7.extend(feature_set1)\n",
     "feature_set7_train_df = prepare_data(train_df, feature_set7)\n",
     "feature_set7_validate_df = prepare_data(validate_df, feature_set7)\n",
-    "eature_set7_test_df = prepare_data(train_df, feature_set7)"
+    "feature_set7_test_df = prepare_data(train_df, feature_set7)"
    ]
   },
   {
@@ -684,7 +684,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "feature_sets_dfs_list = [feature_set1_train_df, feature_set2_train_df, feature_set3_train_df, feature_set4_train_df, feature_set5_train_df, feature_set6_train_df, feature_set7_train_df, feature_set8_train_df, feature_set9_train_df]\n",
@@ -734,13 +736,15 @@
    "metadata": {},
    "source": [
     "### Feature scaling\n",
-    "The columns containing info about each players bet type (Bull/Bear or None, so categorical data) will be One-Hot encoded. The rest of the columns containing info about each players bet size (so numerical data) need to be scaled. Let's check the distribution of some random columns to choose the scaler."
+    "The columns containing info about each players bet type (Bull/Bear or None, so categorical data) have been One-Hot encoded. The rest of the columns containing info about each players bet size (so numerical data) need to be scaled. Let's check the distribution of some random columns to choose the scaler."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "print(feature_set1_train_df.columns)\n",
@@ -750,7 +754,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "print(feature_set3_train_df.columns)\n",
@@ -810,9 +816,39 @@
    "outputs": [],
    "source": [
     "from sklearn.preprocessing import MinMaxScaler\n",
-    "# Train MinMaxScalers for each training dataset\n",
-    "minmax = MinMaxScaler().set_output(transform=\"pandas\")\n",
-    "minmax.fit()"
+    "\n",
+    "def scale_amount_columns(train_df, validate_df, test_df):\n",
+    "    # Train MinMaxScalers for each training dataset\n",
+    "    scaler = MinMaxScaler().set_output(transform=\"pandas\")\n",
+    "\n",
+    "    # Basically we want to scale all the columns that contain 'amount' substring\n",
+    "    columns_to_scale = [col for col in train_df.columns if 'amount' in col]\n",
+    "\n",
+    "    # Fit the scalers on each feature set training data\n",
+    "    train_df[columns_to_scale] = scaler.fit_transform(train_df[columns_to_scale])\n",
+    "    validate_df[columns_to_scale] = scaler.transform(validate_df[columns_to_scale])\n",
+    "    test_df[columns_to_scale] = scaler.transform(test_df[columns_to_scale])\n",
+    "\n",
+    "    return train_df, validate_df, test_df\n",
+    "\n",
+    "feature_set1_train_df, feature_set1_validate_df, feature_set1_test_df = scale_amount_columns(feature_set1_train_df, feature_set1_validate_df, feature_set1_test_df)\n",
+    "feature_set2_train_df, feature_set2_validate_df, feature_set2_test_df = scale_amount_columns(feature_set2_train_df, feature_set2_validate_df, feature_set2_test_df)\n",
+    "feature_set3_train_df, feature_set3_validate_df, feature_set3_test_df = scale_amount_columns(feature_set3_train_df, feature_set3_validate_df, feature_set3_test_df)\n",
+    "feature_set4_train_df, feature_set4_validate_df, feature_set4_test_df = scale_amount_columns(feature_set4_train_df, feature_set4_validate_df, feature_set4_test_df)\n",
+    "feature_set5_train_df, feature_set5_validate_df, feature_set5_test_df = scale_amount_columns(feature_set5_train_df, feature_set5_validate_df, feature_set5_test_df)\n",
+    "feature_set6_train_df, feature_set6_validate_df, feature_set6_test_df = scale_amount_columns(feature_set6_train_df, feature_set6_validate_df, feature_set6_test_df)\n",
+    "feature_set7_train_df, feature_set7_validate_df, feature_set7_test_df = scale_amount_columns(feature_set7_train_df, feature_set7_validate_df, feature_set7_test_df)\n",
+    "feature_set8_train_df, feature_set8_validate_df, feature_set8_test_df = scale_amount_columns(feature_set8_train_df, feature_set8_validate_df, feature_set8_test_df)\n",
+    "feature_set9_train_df, feature_set9_validate_df, feature_set9_test_df = scale_amount_columns(feature_set9_train_df, feature_set9_validate_df, feature_set9_test_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "feature_set2_train_df.describe()"
    ]
   },
   {
