Notebook - Fix the MinMaxScaler - consider columns with 'number' substring as well

--- a/notebooks/PancakePredictPortfolio.ipynb
+++ b/notebooks/PancakePredictPortfolio.ipynb
@@ -821,8 +821,9 @@
     "    # Train MinMaxScalers for each training dataset\n",
     "    scaler = MinMaxScaler().set_output(transform=\"pandas\")\n",
     "\n",
-    "    # Basically we want to scale all the columns that contain 'amount' substring\n",
-    "    columns_to_scale = [col for col in train_df.columns if 'amount' in col]\n",
+    "    # Basically we want to scale all the columns that contain 'amount' or 'number' substring\n",
+    "    substrings = ['amount', 'number']\n",
+    "    columns_to_scale = [col for col in train_df.columns if any(sub in col for sub in substrings)]\n",
     "\n",
     "    # Fit the scalers on each feature set training data\n",
     "    train_df[columns_to_scale] = scaler.fit_transform(train_df[columns_to_scale])\n",
@@ -849,6 +850,15 @@
    "outputs": [],
    "source": [
     "feature_set2_train_df.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "feature_set9_train_df.describe()"
    ]
   },
   {
